--- a/index.html
+++ b/index.html
@@ -19,7 +19,25 @@
             <a class= "bouton" href="">Catégorie 4</a>
         </nav>
         <section>
-            Content 
+            <h2>Liste des items</h2>
+            <div class="container">
+                <img src="" alt=""/> 
+                <p>description</p>
+
+                <img src="" alt=""/> 
+                <p>description</p>
+
+                <img src="" alt=""/> 
+                <p>description</p>
+
+                <img src="" alt=""/> 
+                <p>description</p>
+
+                <img src="" alt=""/> 
+                <p>description</p>
+            </div>
+            
+            
         </section>
         <footer>
             Pied de page
