--- a/index.html
+++ b/index.html
@@ -20,21 +20,8 @@
         </nav>
         <section>
             <h2>Liste des items</h2>
-            <div class="container">
-                <img src="" alt=""/> 
-                <p>description</p>
-
-                <img src="" alt=""/> 
-                <p>description</p>
-
-                <img src="" alt=""/> 
-                <p>description</p>
-
-                <img src="" alt=""/> 
-                <p>description</p>
-
-                <img src="" alt=""/> 
-                <p>description</p>
+            <div class="container" id="container">
+                <!-- Generé en php fichier listeItems.php-->
             </div>
             
             
@@ -43,4 +30,12 @@
             Pied de page
         </footer>
     </body>
+    <script>
+        var xmlHttp = new XMLHttpRequest();
+        xmlHttp.onload = function() {
+            document.getElementById('container').innerHTML = this.responseText;
+        };
+        xmlHttp.open("GET", "./php/listeItems.php", true);
+        xmlHttp.send();
+    </script>
 </html>
