--- a/html/head.html
+++ b/html/head.html
@@ -4,8 +4,10 @@
     <meta name="description" content="description de la page" />
     <meta name="keywords" content="mots-clé, mot" />
     <meta name="robots" content="index,follow" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bibliotheque.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
+    
 </head>
