--- a/html/nav.html
+++ b/html/nav.html
@@ -1,4 +1,4 @@
-<nav></nav>
+<nav>
     <a class="boutonNav flexBoxRow flexBoxCenter" href="index.php">Jeux</a>
     <a class="boutonNav flexBoxRow flexBoxCenter" href="actualite.php">Actualité</a>
     <a class="boutonNav flexBoxRow flexBoxCenter" href="quiSommesNous.php">Qui nous sommes</a>
