Formulaire fonctionnel avec ajout d'image et page connexion et gestion des utilisateurs

--- a/html/header.html
+++ b/html/header.html
@@ -4,7 +4,7 @@
         <h1 class="bleu">LE CHAUDRON&nbsp</h1>
         <h1 class="rose">LUDIQUE</h1>
     </section>
-    <a class="widthBouton bouton flexBoxRow flexBoxCenter shadow" href="insertion.php?mode=insertion">
+    <a class="widthBouton bouton flexBoxRow flexBoxCenter shadow" href="connexion.php">
         <p>Connexion</p>
     </a>
 </header>
