mise en place du panier et de la modification des informations de contact. Résolution bug modification jeu

--- a/html/footer.html
+++ b/html/footer.html
@@ -19,7 +19,7 @@
                 Page Twitter
             </a>
         </section>
-        <section id="contact-info">
+        <section id="contactInfoFooter">
         </section>
     </section>
 </footer>
