--- a/html/nav.html
+++ b/html/nav.html
@@ -1,5 +1,5 @@
 <nav>
-    <a class="boutonNav flexBoxRow flexBoxCenter" href="index.php">Jeux</a>
+    <a class="boutonNav flexBoxRow flexBoxCenter" href="jeux.php">Jeux</a>
     <a class="boutonNav flexBoxRow flexBoxCenter" href="actualite.php">Actualité</a>
     <a class="boutonNav flexBoxRow flexBoxCenter" href="quiSommesNous.php">Qui nous sommes</a>
     <a class="boutonNav flexBoxRow flexBoxCenter" href="contact.php">Contact</a>
