Ajout responsive et burger menu

--- a/html/head.html
+++ b/html/head.html
@@ -1,7 +1,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="title" content="Titre de la page"/>
-    <meta name="description" content="description de la page" />
+    <meta name="title" content="Le Chaudron Ludique"/>
+    <meta name="description" content="Bienvenue dans le royaume des jeux de société à Rodez" />
     <meta name="keywords" content="mots-clé, mot" />
     <meta name="robots" content="index,follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
