--- a/html/footer.html
+++ b/html/footer.html
@@ -7,16 +7,12 @@
             <li><a class="footerText" href="contact.php">Contact</a></li>
             <h4>Suivez-nous :</h4>    
             <a class="flexBoxRow flexBoxCenter footerText" href="https://www.facebook.com/lechaudronludique" target="_blank">
-                <img class="icons" src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook">
+                <img class="icons" src="./imgBoutique/logoFacebook.png" alt="Facebook">
                 Page Facebook
             </a>
             <a class="flexBoxRow flexBoxCenter footerText" href="https://www.instagram.com/lechaudronludique/" target="_blank">
-                <img class="icons" src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" >
+                <img class="icons" src="./imgBoutique/logoInstagram.png" alt="Instagram" >
                 Page Instagram
-            </a>
-            <a class="flexBoxRow flexBoxCenter footerText" href="https://twitter.com/CaverneLudique" target="_blank">
-                <img class="icons" src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter" >
-                Page Twitter
             </a>
         </section>
         <section id="contactInfoFooter">
