Corrections mediaquery et derniers changements

--- a/html/footer.html
+++ b/html/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <section class="flexBoxRow flexBoxCenter">
-        <section class="flexBoxColumn flexBoxCenter">
+        <section class="margin flexBoxColumn flexBoxCenter">
             <p>&copy; 2024 Le Chaudron Ludique. Tous droits réservés.</p>
             <li><a class="footerText" href="mentionsLegales.php">Mentions légales</a></li>
             <li><a class="footerText" href="politiqueConfidentialite.php">Politique de confidentialité</a></li>
@@ -15,7 +15,7 @@
                 Page Instagram
             </a>
         </section>
-        <section id="contactInfoFooter">
+        <section id="contactInfoFooter" class="marginLeftRight">
         </section>
     </section>
 </footer>
